[package]
name = "companade_expr_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pest = "2.5.6"
pest_derive = "2.5.6"
rand = { version = "0.8.5", features = ["small_rng"]}
rand_distr = { version = "0.4.3"}

# const-str = { version = "0.5.3", features = ["all"] }
# konst = "0.3.4"
# noise = {version = "0.8.2", features = ["images"]}
# rand = "0.8.5"
